# rust_csv_examples

./: Cargo.toml  README.md
data/: Customers.csv  JoinedRecords.csv  Orders.csv
src/: lib.rs
