[package]
name = "rust_csv"
version = "0.1.0"
authors = ["andrewleverette <andrew.leverette@decisionsource.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }